<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:tag="2"
    tools:context="com.dialog.dialogwizardlib.wizardlayouts.ThirdFragment">

    <TextView
        android:id="@+id/textview_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_third_fragment"
        app:layout_constraintBottom_toBottomOf="@id/button_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_third"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_third" />

    <!-- NEEDED FOR LIB. OTHERWISE CANT EXIT WIZARD -->
    <!-- exit fab -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_wizard_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/nullstr" />

</androidx.constraintlayout.widget.ConstraintLayout>