<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.dialog.dialogwizardlib.wizardlayouts.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <!--animations here, affects the action-respective fragment
        so, enterAnim is the animation of second fragment
        while its coming on the foreground, triggered from first-->

        <!--TIP: Do not touch animations-->
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/dialog_wizard_slide_in_right"
            app:exitAnim="@anim/dialog_wizard_slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.dialog.dialogwizardlib.wizardlayouts.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/dialog_wizard_slide_in_left"
            app:exitAnim="@anim/dialog_wizard_slide_out_right"/>

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/dialog_wizard_slide_in_right"
            app:exitAnim="@anim/dialog_wizard_slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.dialog.dialogwizardlib.wizardlayouts.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <!--TIP: Do not touch animations-->
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/dialog_wizard_slide_in_left"
            app:exitAnim="@anim/dialog_wizard_slide_out_right"/>
    </fragment>
</navigation>